Revise README.md for project details and structure
Updated project name and structure in README.md. Added detailed sections on project presentation, context, problem statement, algorithmic approach, functionalities, technologies used, and project organization.